Actualizando contenido del scripts

--- a/scripts/Datos_preproceso.ipynb
+++ b/scripts/Datos_preproceso.ipynb
@@ -20,7 +20,7 @@
     "from datetime import datetime, timedelta\n",
     "import os\n",
     "\n",
-    "csv_file = 'Consultas_SGC/_Catalogo_Ultimo.csv'\n",
+    "csv_file = 'data/Catalogo_Ultimo.csv'\n",
     "\n",
     "# Leer CSV y limpiar encabezados\n",
     "df = pd.read_csv(csv_file, skipinitialspace=True)\n",
@@ -849,9 +849,9 @@
     "from obspy.core.utcdatetime import UTCDateTime\n",
     "\n",
     "# ======== CONFIGURACIÓN ========\n",
-    "input_folder = r\"E:/TG/BADASI/H_ajustados_6000\"      # Carpeta con tus archivos .mseed\n",
-    "output_file = r\"E:/TG/BADASI/REDNE_plantilla.hdf5\"        # Archivo de salida HDF5\n",
-    "json_stations = r\"E:/TG/BADASI/UbiacionEstaciones/estacionesREDNE_data.json\"  # Archivo JSON con metadatos de estaciones\n",
+    "input_folder = r\"H_ajustados_6000\"      # Carpeta con tus archivos .mseed\n",
+    "output_file = r\"data/REDNE_plantilla.hdf5\"        # Archivo de salida HDF5\n",
+    "json_stations = r\"data/estacionesREDNE_data.json\"  # Archivo JSON con metadatos de estaciones\n",
     "\n",
     "# ======== CARGAR JSON DE ESTACIONES ========\n",
     "with open(json_stations, \"r\", encoding=\"utf-8\") as f:\n",
