Actualizando contenido del scripts

--- a/database/Database.ipynb
+++ b/database/Database.ipynb
@@ -29,7 +29,7 @@
     "col_versions = db[\"metadatos_EV_versiones\"]\n",
     "\n",
     "# --- Leer HDF5 ---\n",
-    "with h5py.File(\"REDNE_plantilla.hdf5\", \"r\") as f:\n",
+    "with h5py.File(\"../data/REDNE_plantilla.hdf5\", \"r\") as f:\n",
     "    data_group = f[\"data\"]\n",
     "\n",
     "    for trace_name in data_group.keys():\n",
@@ -124,7 +124,7 @@
     "col_versions = db[\"metadatos_NO_versiones\"]\n",
     "\n",
     "# --- Leer HDF5 ---\n",
-    "with h5py.File(\"REDNE_plantilla_noise.hdf5\", \"r\") as f:\n",
+    "with h5py.File(\"../data/REDNE_plantilla_noise.hdf5\", \"r\") as f:\n",
     "    data_group = f[\"data\"]\n",
     "\n",
     "    for trace_name in data_group.keys():\n",
@@ -313,9 +313,9 @@
     "import os\n",
     "\n",
     "# ================== CONFIG ==================\n",
-    "HDF5_PLANTILLA = r\"E:/TG/BADASI/REDNE_plantilla.hdf5\"\n",
-    "CSV_FILTRO = r\"E:/TG/BADASI/REDNE.csv\"\n",
-    "OUTPUT_DIR = r\"E:/TG/BADASI/Versiones\"\n",
+    "HDF5_PLANTILLA = r\"../data/REDNE_plantilla.hdf5\"\n",
+    "CSV_FILTRO = r\"../data/REDNE.csv\"\n",
+    "OUTPUT_DIR = r\"../data/Versiones\"\n",
     "\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
