--- a/scripts/Datos_preproceso.ipynb
+++ b/scripts/Datos_preproceso.ipynb
@@ -850,8 +850,8 @@
     "\n",
     "# ======== CONFIGURACIÓN ========\n",
     "input_folder = r\"H_ajustados_6000\"      # Carpeta con tus archivos .mseed\n",
-    "output_file = r\"data/REDNE_plantilla.hdf5\"        # Archivo de salida HDF5\n",
-    "json_stations = r\"data/estacionesREDNE_data.json\"  # Archivo JSON con metadatos de estaciones\n",
+    "output_file = r\"../data/REDNE_plantilla.hdf5\"        # Archivo de salida HDF5\n",
+    "json_stations = r\"../data/estacionesREDNE_data.json\"  # Archivo JSON con metadatos de estaciones\n",
     "\n",
     "# ======== CARGAR JSON DE ESTACIONES ========\n",
     "with open(json_stations, \"r\", encoding=\"utf-8\") as f:\n",
