Actualizando contenido del scripts

--- a/scripts/Datos_preproceso.ipynb
+++ b/scripts/Datos_preproceso.ipynb
@@ -20,7 +20,7 @@
     "from datetime import datetime, timedelta\n",
     "import os\n",
     "\n",
-    "csv_file = 'data/Catalogo_Ultimo.csv'\n",
+    "csv_file = '../data/Catalogo_Ultimo.csv'\n",
     "\n",
     "# Leer CSV y limpiar encabezados\n",
     "df = pd.read_csv(csv_file, skipinitialspace=True)\n",
