Actualizando contenido del database

--- a/database/Insert_DB_DS.ipynb
+++ b/database/Insert_DB_DS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5440aa0a",
+   "id": "f364b155",
    "metadata": {},
    "source": [
     "SINCRONIZAR REDNE_plantilla.hdf5 Y  mongoDB"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4100c8cb",
+   "id": "70ce9f7a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,12 +92,12 @@
     "                \"metadata\": metadata\n",
     "            })\n",
     "\n",
-    "print(\"\\nSincronización con versionamiento finalizada.\")\n"
+    "print(\"\\nSincronización con versionamiento finalizada.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0f527ad4",
+   "id": "e6be3969",
    "metadata": {},
    "source": [
     "SINCRONIZAR REDNE_plantilla_noise.hdf5 Y  mongoDB"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fb96324",
+   "id": "d255b3d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,190 +189,6 @@
     "\n",
     "print(\"\\nSincronización con versionamiento finalizada.\")\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d543afb4",
-   "metadata": {},
-   "source": [
-    "Ingresar varios metadatos al la base de datos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "899785b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from insertupdate import guardar_o_actualizar\n",
-    "\n",
-    "df = pd.read_csv(\"nuevos_metadatos.csv\")    #dirección del archivo\n",
-    "\n",
-    "for _, row in df.iterrows():\n",
-    "    documento = row.to_dict()\n",
-    "    guardar_o_actualizar(documento)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3bf3140",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "from insertupdate import guardar_o_actualizar\n",
-    "\n",
-    "with open(\"nuevos_metadatos.json\", \"r\") as f:    #dirección del archivo\n",
-    "    data = json.load(f)\n",
-    "\n",
-    "for item in data:\n",
-    "    guardar_o_actualizar(item)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0228c0c8",
-   "metadata": {},
-   "source": [
-    "Escoger versión"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee367502",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pymongo import MongoClient\n",
-    "\n",
-    "# --- Conexión ---\n",
-    "MONGO_URI = \"mongodb://Escritor:123456@localhost:27017/redne?authSource=redne\"\n",
-    "client = MongoClient(MONGO_URI)\n",
-    "\n",
-    "db = client[\"redne\"]\n",
-    "col_actual = db[\"metadatos_EV\"]\n",
-    "col_versiones = db[\"metadatos_EV_versiones\"]\n",
-    "\n",
-    "# === CONFIGURACIÓN ===\n",
-    "VERSION_OBJETIVO = 1  # <-- la versión a restaurar\n",
-    "# ======================\n",
-    "\n",
-    "# Buscar todos los documentos actuales\n",
-    "docs = list(col_actual.find({}))\n",
-    "\n",
-    "restaurados = 0\n",
-    "no_encontrados = []\n",
-    "\n",
-    "for doc in docs:\n",
-    "    tid = doc[\"_id\"]\n",
-    "\n",
-    "    # buscar versión antigua\n",
-    "    version_ant = col_versiones.find_one({\n",
-    "        \"trace_id\": tid, \n",
-    "        \"version\": VERSION_OBJETIVO\n",
-    "    })\n",
-    "\n",
-    "    if not version_ant:\n",
-    "        no_encontrados.append(tid)\n",
-    "        continue\n",
-    "\n",
-    "    # obtener metadatos guardados\n",
-    "    metadata = version_ant[\"metadata\"].copy()\n",
-    "    metadata[\"version\"] = VERSION_OBJETIVO  # restaurar versión\n",
-    "\n",
-    "    # sobrescribir documento actual\n",
-    "    col_actual.replace_one({\"_id\": tid}, metadata)\n",
-    "    restaurados += 1\n",
-    "\n",
-    "print(f\"\\nDocumentos restaurados: {restaurados}\")\n",
-    "print(f\"Documentos sin versión {VERSION_OBJETIVO}: {no_encontrados}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "190d3a85",
-   "metadata": {},
-   "source": [
-    "Crear nuevo .hdf5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc46f036",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import h5py\n",
-    "import pandas as pd\n",
-    "from datetime import datetime\n",
-    "import os\n",
-    "\n",
-    "# ================== CONFIG ==================\n",
-    "HDF5_PLANTILLA = r\"../data/REDNE_plantilla.hdf5\"\n",
-    "CSV_FILTRO = r\"../data/REDNE.csv\"\n",
-    "OUTPUT_DIR = r\"../data/Versiones\"\n",
-    "\n",
-    "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "\n",
-    "fecha = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
-    "OUTPUT_HDF5 = os.path.join(\n",
-    "    OUTPUT_DIR,\n",
-    "    f\"REDNE_{fecha}.hdf5\"\n",
-    ")\n",
-    "\n",
-    "# ================== CARGA CSV ==================\n",
-    "df = pd.read_csv(CSV_FILTRO)\n",
-    "df[\"trace_name\"] = df[\"trace_name\"].astype(str)\n",
-    "\n",
-    "trazas_filtradas = set(df[\"trace_name\"].unique())\n",
-    "\n",
-    "print(f\"Trazas a incluir: {len(trazas_filtradas)}\")\n",
-    "\n",
-    "# ================== PROCESO HDF5 ==================\n",
-    "with h5py.File(HDF5_PLANTILLA, \"r\") as f_in, \\\n",
-    "     h5py.File(OUTPUT_HDF5, \"w\") as f_out:\n",
-    "\n",
-    "    # Crear grupo /data\n",
-    "    grp_out = f_out.create_group(\"data\")\n",
-    "    grp_in = f_in[\"data\"]\n",
-    "\n",
-    "    for trace in trazas_filtradas:\n",
-    "\n",
-    "        if trace not in grp_in:\n",
-    "            print(f\" Traza no encontrada: {trace}\")\n",
-    "            continue\n",
-    "\n",
-    "        dset_in = grp_in[trace]\n",
-    "\n",
-    "        # -------- Copiar dataset --------\n",
-    "        dset_out = grp_out.create_dataset(\n",
-    "            trace,\n",
-    "            data=dset_in[:],\n",
-    "            compression=\"gzip\"\n",
-    "        )\n",
-    "\n",
-    "        # -------- Copiar atributos originales --------\n",
-    "        for k, v in dset_in.attrs.items():\n",
-    "            dset_out.attrs[k] = v\n",
-    "\n",
-    "        # -------- Sobrescribir / agregar atributos desde CSV --------\n",
-    "        fila = df[df[\"trace_name\"] == trace].iloc[0]\n",
-    "\n",
-    "        for col in df.columns:\n",
-    "            if col == \"trace_name\":\n",
-    "                continue\n",
-    "            dset_out.attrs[col] = str(fila[col])\n",
-    "\n",
-    "        print(f\"Copiada: {trace}\")\n",
-    "\n",
-    "print(\"\\n Archivo HDF5 creado:\")\n",
-    "print(OUTPUT_HDF5)\n"
-   ]
   }
  ],
  "metadata": {
@@ -382,15 +198,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.9.21"
   }
  },
