Actualizando contenido de scripts

--- a/scripts/Noise.ipynb
+++ b/scripts/Noise.ipynb
@@ -31,7 +31,7 @@
     "# Sin el límite de descargas\n",
     "count = 0\n",
     "\n",
-    "download_folder = 'E:/TG/BADASI/A_REDNE_mseed_downloads_noise'\n",
+    "download_folder = 'A_REDNE_mseed_downloads_noise'\n",
     "os.makedirs(download_folder, exist_ok=True)\n",
     "\n",
     "# Estaciones de interés: UIS01, UIS02, ..., UIS11\n",
